kubernetes/apps/network/internal/gateways/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: network
  labels:
    dns-provider: internal
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-internal-proxy
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: HTTPRoute
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: "${SECRET_DOMAIN/./-}-production-tls"
            namespace: cert-manager
            kind: Secret
