kubernetes/apps/network/internal/gateways/http-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
  hostnames:
    - "*.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
