kubernetes/apps/network/internal/gateways/httproute-redirect.yaml
---
# Redirect all HTTP traffic to HTTPS for the internal gateway
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-http-to-https-redirect
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
  hostnames:
    - "*.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
